...
            app:boxCornerRadiusBottomEnd="@dimen/dimen24"
            app:boxCornerRadiusBottomStart="@dimen/dimen24"
            app:boxCornerRadiusTopEnd="@dimen/dimen24"
            app:boxCornerRadiusTopStart="@dimen/dimen24"
            app:boxBackgroundMode="outline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/search_button"
            app:layout_constraintTop_toBottomOf="@id/title_textview"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/search_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:maxLines="1"
                />

...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/horizontal_scrollview"
            app:layout_constraintBottom_toTopOf="@id/left_arrow_imageview"
            >

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/image_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen32"
                android:background="@color/colorPrimaryDark"
                />
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
...
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/swipe_recyclerview"
            app:layout_constraintStart_toEndOf="@+id/left_arrow_imageview"
            app:layout_constraintEnd_toStartOf="@id/right_arrow_imageview"
            />

        <ImageButton
            android:id="@+id/right_arrow_imageview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
